Fix close page button not showing on ios

--- a/code/assets/skin.css
+++ b/code/assets/skin.css
@@ -358,4 +358,5 @@ leaflet-spinner .loader-container {
     background: #00000099;
     flex-direction: column;
     justify-content: center;
+    z-index: 10;
 }
